[gd_scene load_steps=8 format=2]

[ext_resource path="res://sounds/GGJ_Team_Cuisine_Music_V2.ogg" type="AudioStream" id=1]
[ext_resource path="res://Universe.gd" type="Script" id=2]
[ext_resource path="res://sounds/Conveyer_Belt_D3.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/New_Switch_Sound_1.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/GGJ_Team_Cuisine_Game_Over_Music.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/GGJ_Team_Cuisine_Menu_Music.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/Switch_Sound.ogg" type="AudioStream" id=7]

[node name="Universe" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="NoiseConveyor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.624

[node name="SwitchOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SwitchOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MusicMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MusicGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
